[package]
name = "crossterm"
version = "0.26.1"
authors = ["T. Post"]
description = "A crossplatform terminal library for manipulating terminals."
repository = "https://github.com/crossterm-rs/crossterm"
documentation = "https://docs.rs/crossterm/"
license = "MIT"
keywords = ["event", "color", "cli", "input", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2021"
categories = ["command-line-interface", "command-line-utilities"]

[lib]
name = "crossterm"
path = "src/lib.rs"

#
# Build documentation with all features -> EventStream is available
#
[package.metadata.docs.rs]
all-features = true

#
# Features
#
[features]
default = ["bracketed-paste", "windows", "events"]
windows = ["dep:winapi", "dep:crossterm_winapi"]
bracketed-paste = []
event-stream = ["futures-core", "events"]
use-dev-tty = ["filedescriptor"]
events = ["dep:mio", "dep:signal-hook", "dep:signal-hook-mio"]
serde = ["dep:serde", "bitflags/serde"]

#
# Shared dependencies
#
[dependencies]
bitflags = {version = "2.1" }
parking_lot = "0.12"

# optional deps only added when requested
futures-core = { version = "0.3", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

#
# Windows dependencies
#
[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winuser", "winerror"]
optional = true

[target.'cfg(windows)'.dependencies]
crossterm_winapi = { version = "0.9", optional = true }

#
# UNIX dependencies
#
[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = { version = "0.3.13", optional = true }
filedescriptor = { version = "0.8", optional = true }
mio = { version = "0.8", features = ["os-poll"], optional = true }
signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"], optional = true }

#
# Dev dependencies (examples, ...)
#
[dev-dependencies]
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
futures-timer = "3.0"
async-std = "1.12"
serde_json = "1.0"

#
# Examples
#
[[example]]
name = "event-read"
required-features = ["bracketed-paste", "events"]

[[example]]
name = "event-match-modifiers"
required-features = ["bracketed-paste", "events"]

[[example]]
name = "event-poll-read"
required-features = ["bracketed-paste", "events"]

[[example]]
name = "event-stream-async-std"
required-features = ["event-stream", "events"]

[[example]]
name = "event-stream-tokio"
required-features = ["event-stream", "events"]

[[example]]
name = "event-read-char-line"
required-features = ["events"]

[[example]]
name = "stderr"
required-features = ["events"]
