[package]
name = "crossterm_cursor"
version = "0.2.4"
authors = ["T. Post"]
description = "A cross-platform library for moving the terminal cursor."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_cursor/"
license = "MIT"
keywords = ["cursor", "cli", "crossterm", "crossplatform", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }
crossterm_winapi = "0.1.4"

[dependencies]
crossterm_utils = "0.2.3"