[package]
name = "crossterm_cursor"
version = "0.2.5"
authors = ["T. Post"]
description = "A cross-platform library for moving the terminal cursor."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_cursor/"
license = "MIT"
keywords = ["cursor", "cli", "crossterm", "crossplatform", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}
lazy_static = "1.4"
winapi = { version =  "0.3.7", features = ["wincon","winnt","minwindef"] }

[dependencies]
crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
