[package]
name = "crossterm_cursor"
version = "0.3.0"
authors = ["T. Post"]
description = "A cross-platform library for moving the terminal cursor."
repository = "https://github.com/crossterm-rs/crossterm"
documentation = "https://docs.rs/crossterm_cursor/"
license = "MIT"
keywords = ["cursor", "cli", "crossterm", "crossplatform", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["wincon","winnt","minwindef"] }
crossterm_winapi = { path="../crossterm_winapi", version = "0.2.0"}

[dependencies]
crossterm_utils = { path="../crossterm_utils", version = "0.3.0"}
