[package]
name = "crossterm_input"
version = "0.3.6"
authors = ["T. Post"]
description = "A cross-platform library for reading userinput."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_input/"
license = "MIT"
keywords = ["input", "keys", "crossterm", "events", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["winnt", "winuser"] }
crossterm_winapi = "0.1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"

[dependencies]
crossterm_utils = "0.2.3"
crossterm_screen = "0.2.3"