[package]
name = "crossterm_input"
version = "0.3.8"
authors = ["T. Post"]
description = "A cross-platform library for reading userinput."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_input/"
license = "MIT"
keywords = ["input", "keys", "crossterm", "events", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["winnt", "winuser"] }
crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"

[dependencies]
crossterm_utils = { path="../crossterm_utils", version = "0.2.4"}
crossterm_screen = {path="../crossterm_screen", version = "0.2.4"}
serde = { version = "1.0", features = ["derive"], optional = true }
