[package]
name = "crossterm_screen"
version = "0.2.4"
authors = ["T. Post"]
description = "A cross-platform library for raw and alternate screen."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_screen/"
license = "MIT"
keywords = ["screen", "alternate", "raw", "crossterm", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[dependencies]
crossterm_utils = {path="../crossterm_utils", version = "^0.2"}

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["minwindef", "wincon"] }
crossterm_winapi = { path="../crossterm_winapi", version = "^0.1"}