[package]
name = "crossterm_style"
version = "0.4.0"
authors = ["T. Post"]
description = "A cross-platform library styling the terminal output."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_style/"
license = "MIT"
keywords = ["style", "color", "attributes", "crossterm", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["wincon"] }
crossterm_winapi = { path="../crossterm_winapi", version = "^0.1"}

[dependencies]
crossterm_utils = {path="../crossterm_utils", version = "^0.2.4"}
