[package]
name = "crossterm_terminal"
version = "0.1.0"
authors = ["T. Post"]
description = "A cross-platform library for doing terminal related actions."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_terminal/"
license = "MIT"
keywords = ["terminal", "clear", "crossplatform", "crossterm", "terminal size"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
crossterm_winapi = "0.1.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"

[dependencies]
crossterm_utils = { path = "../crossterm_utils" }
crossterm_cursor = "0.1.0"

[[example]]
name = "terminal"
path = "examples/terminal.rs"