[package]
name = "crossterm_utils"
version = "0.2.4"
authors = ["T. Post"]
description = "Common logic used by the crossterm crates."
repository = "https://github.com/TimonPost/crossterm"
documentation = "https://docs.rs/crossterm_utils/"
license = "MIT"
keywords = ["terminal", "abstractions", "crossterm", "windows", "screen_buffer"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.7", features = ["wincon"] }
crossterm_winapi = { path="../crossterm_winapi", version = "0.1.5"}

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"

[dev-dependencies]
crossterm_utils = { path = "../crossterm_utils" }
crossterm_cursor = { path = "../crossterm_cursor" }
crossterm_terminal = { path = "../crossterm_terminal" }
