[package]
name = "crossterm_winapi"
version = "0.2.0"
authors = ["T. Post"]
description = "An WinApi wrapper that provides some basic simple abstractions aground common WinApi calls"
repository = "https://github.com/crossterm-rs/crossterm_winapi"
documentation = "https://docs.rs/crossterm_winapi/"
license = "MIT"
keywords = ["winapi", "abstractions", "crossterm", "windows", "screen_buffer"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["winbase","consoleapi","processenv", "handleapi"] }
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
